templates/app/prod/ingress.yaml
# prod on the tailnet: https://__APP__.lab.munkcloud.dk
# Traefik serves the wildcard certificate from its TLSStore.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP__
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: __APP__.lab.munkcloud.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __APP__
                port:
                  name: http
